--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,13 @@
     font-family: 'Kumbh Sans', sans-serif;
 }
 
-
 .navbar {
     background: #131313 ;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.2 rem;
+    font-size: 1.2rem;
     position: sticky;
     top:0%;
     z-index: 999;
@@ -21,11 +20,14 @@
 .navbar_container{
     display:  flex;
     justify-content: space-between;
+    height: 80px;
     z-index: 1;
     width: 100%;
     max-width: 1300px;
-    margin: 0 auto;
-    padding: 0 50px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 #nav_logo{
@@ -40,13 +42,12 @@
     align-items: center;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2 rem;
+    font-size: 2rem;
 }
 
-/* find it */
-.fa-gem {
-    margin-right: 0.5rem;
-}
+ .fa-gem {
+    margin-right: 0.5rem; 
+ }
 
 .navbar_menu{
     display: flex;
@@ -76,6 +77,7 @@
     padding: 0 1rem;
     width: 100%;
 }
+
 .button{
     display: flex;
     justify-content: center;
@@ -90,3 +92,107 @@
     background: #f77062;
     color: #fff;
 }
+
+.button:hover{
+    background-color: #4837ff;
+    transition: all 0.5s ease;
+}
+
+.navbar_links:hover{
+    color: #f77062;
+    transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 960px) {
+ .navbar_container{
+     display: flex;
+     justify-content:  space-between;
+     height: 80px;
+     z-index: 1;
+     width: 100%;
+     max-width:1300px ;
+     padding: 0;
+ }
+
+ .navbar_menu{
+     display: grid;
+     grid-template-columns: auto;
+     margin: 0;
+     width: 100%;
+     position: absolute;
+     top: -1000px;
+     opacity: 1;
+     transition: all 0.5s ease;
+     height: 50vh;
+     z-index: -1;
+ }
+
+ .navbar_menu.active{
+    background: #131313;
+     top: 100%;
+     opacity: 1;
+     transition: all 0.5s ease;
+     z-index: 99;
+     height: 50vh;
+     font-size: 1.6rem;
+ }
+
+    #nav_logo{
+        padding-left:25px;
+    }
+    
+    .navbar_toggle .bar{
+        width: 25px;
+        height: 3px;
+        margin:5px auto;
+        transition: all 0.3s ease-in-out;
+        background: #fff;
+    }
+
+    .navbar_item{
+        width: 100%;
+    }
+
+    .navbar_links{
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+
+    #mobile-menu {
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+      }
+
+    .navbar_btn{
+        padding-bottom: 2rem;
+    }
+    .button{
+        display: flex;
+        justify-content: center;
+        align-items:  center;
+        width: 80%;
+        height: 80px;
+        margin: 0;
+    }
+
+    .navbar_toggle .bar{
+        display: block;
+        cursor: pointer;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 0;
+      }
+    
+      #mobile-menu.is-active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+      }
+    
+      #mobile-menu.is-active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+      }
+    }
